# axotyped

./: CHANGELOG.md  Cargo.toml  README.md  knope.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/ts/: mod.rs  optional.rs  utils.rs
macros/src/ts/attr/: enum.rs  field.rs  mod.rs  struct.rs  variant.rs
macros/src/ts/types/: enum.rs  mod.rs  named.rs  newtype.rs  tuple.rs  type_as.rs  type_override.rs  unit.rs
src/: builder.rs  generator.rs  lib.rs  macros.rs  types.rs
src/ts/: export.rs  mod.rs
tests/: builder_tests.rs  generator_tests.rs  macro_tests.rs
tests/snapshots/: yauth_style.ts
